--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignemnt-11-server",
+  "name": "assignment-11-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
